# Ageha-Editor

./: .prettierrc.json  LICENSE  README.md  README_ENGLISH.md  SPECIFICATION.md  SPECIFICATION_ENGLISH.md  index.html  package-lock.json  package.json  release_notes.md  toc-sample.html  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
public/: preview.js  print.css  viewer.css
src/: App.vue  Editor.vue  Viewer.vue  constants.ts  env.d.ts  github.css  i18n.ts  interface.ts  main.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  viewer.json
src-tauri/src/: config.rs  init.rs  lib.rs  main.rs  schema.rs  utils.rs
src-tauri/src/handler/: file.rs  mod.rs  spawn_self.rs
src/components/: Help.vue  HelpModal.vue  MarkdownTools.vue  MessageModal.vue  ToolbarButtons.vue
src/composables/: useAceEditor.ts  useExport.ts  useFileOperations.ts  useKeyboardShortcuts.ts  useMarkdownPreview.ts  useScrollSync.ts  useWindowSize.ts
src/stores/: appInits.ts  localStorages.ts  markdownDatas.ts
src/test/: testUtils.ts
src/test/composables/: useAceEditor.test.ts  useExport.test.ts  useFileOperations.test.ts  useKeyboardShortcuts.test.ts  useMarkdownPreview.test.ts  useScrollSync.test.ts  useWindowSize.test.ts
src/test/utils/: assetPaths.test.ts  clipboard.test.ts  (+5 more)
src/utils/: assetPaths.ts  clipboard.ts  documentMode.ts  htmlTemplate.ts  markedSetup.ts  slideRenderer.ts  slideTheme.ts
theme-example/slide/: midnight-stage.css  mint-glass.css  paper-copper.css
